--- a/templates/household expenditure.html
+++ b/templates/household expenditure.html
@@ -14,6 +14,8 @@
 
     <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
     <link href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" rel="stylesheet">
+    
+    <script src="{{url_for('static', filename='js/filterage.js')}}"></script>
 
     <style>
             body {
