--- a/templates/household income.html
+++ b/templates/household income.html
@@ -13,6 +13,8 @@
 
     <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
     <link href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" rel="stylesheet">
+    
+    <script src="{{url_for('static', filename='js/filterincome.js')}}"></script>
 
     <style>
             body {
